fix(backend): resolve SonarQube code quality issues across backend
Fix multiple SonarQube issues improving code maintainability,
reliability, and readability:

- Fix stream resource leak in ArchiviazioneFileSystemService (blocker)
- Fix empty test in ArchiviazioneFileSystemServiceTest (blocker)
- Change 53 private controller handler methods to public (S3751)
- Remove superfluous @ResponseBody on @RestController (S6837)
- Remove 17 unnecessary public modifiers from test classes/methods
  (S5786)
- Replace .collect(Collectors.toList()) with .toList() (S6204)
- Remove 10 dead store assignments (S1854)
- Extract 4 duplicate string literals to constants (S1192)
- Fix generic wildcard type ResponseEntity<?> to ResponseEntity<Void>
  (S1452)
- Fix empty test methods (S1186)
- Replace SELECT * with explicit columns in native query (GCI74)
- Replace [0-9] with \d in CAP validation regex (S6353)
- Remove unnecessary parentheses from single-param lambda (S1611)
- Batch repository.save() calls into saveAll() in ItinerariStubAdapter
  (GCI1)
- Make ~63 local variables final in main source files (GCI82)